--- a/rockwerchter.html
+++ b/rockwerchter.html
@@ -41,7 +41,7 @@
                     <rect x="3" y="11" width="18" height="11" rx="2" ry="2"/>
                     <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
                 </svg>
-                <span>Je bekijkt de drankkaart als gast. <a href="login.html">Log in</a> om te bestellen.</span>
+                <span>Je bekijkt de drankkaart als gast. <a href="login.html">Log in</a> om te gebruiken.</span>
             </div>
 
             <section class="drankjes-section">
@@ -54,7 +54,7 @@
                 <div class="totaal-header">
                     <div class="totaal-prijs" id="totaalPrijs">Totaal: &euro;0,00</div>
                     <div class="totaal-acties">
-                        <button id="bestellingenBtn" class="icon-action-btn bestellingen-btn" title="Bestellingen bekijken">
+                        <button id="bestellingenBtn" class="icon-action-btn bestellingen-btn" title="Bestellingen bekijken" style="display:none;">
                             &#128203;
                         </button>
                         <button id="resetBtn" class="icon-action-btn reset-icon-btn" title="Reset bestelling">
@@ -180,9 +180,9 @@
                         <div class="cash-snel-rij">
                             <button class="cash-snel-btn" data-bedrag="2">&#8364;2</button>
                             <button class="cash-snel-btn" data-bedrag="1">&#8364;1</button>
-                            <button class="cash-snel-btn" data-bedrag="0.50">&#8364;0.50</button>
-                            <button class="cash-snel-btn" data-bedrag="0.20">&#8364;0.20</button>
-                            <button class="cash-snel-btn" data-bedrag="0.10">&#8364;0.10</button>
+                            <button class="cash-snel-btn" data-bedrag="0.50">50&#162;</button>
+                            <button class="cash-snel-btn" data-bedrag="0.20">20&#162;</button>
+                            <button class="cash-snel-btn" data-bedrag="0.10">10&#162;</button>
                         </div>
                         <!-- Rij 3: acties – altijd onder de knoppen -->
                         <div class="cash-snel-rij cash-actie-rij">
@@ -211,6 +211,33 @@
     </div>
 
     <!-- ════════════════════════════════════════
+         EXPORT BEVESTIGING MODAL (admin)
+         ════════════════════════════════════════ -->
+    <div class="rw-modal-backdrop" id="exportModal">
+        <div class="rw-modal">
+            <div class="rw-modal-header">
+                <h3>&#128229; Excel gedownload</h3>
+            </div>
+            <div class="rw-modal-body">
+                <div class="export-bevestig-info" id="exportBevestigInfo"></div>
+                <div class="export-waarschuwing">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22">
+                        <path d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0z"/>
+                        <line x1="12" y1="9" x2="12" y2="13"/><line x1="12" y1="17" x2="12.01" y2="17"/>
+                    </svg>
+                    <p>Het Excel-bestand is gedownload. Wil je nu de database leegmaken?<br>
+                    <strong>Dit kan niet ongedaan gemaakt worden.</strong></p>
+                </div>
+                <div class="modal-status" id="exportModalStatus" style="display:none;"></div>
+            </div>
+            <div class="rw-modal-footer">
+                <button class="rw-modal-btn cancel" id="exportAnnuleer">&#8592; Annuleren</button>
+                <button class="rw-modal-btn danger-btn" id="exportLeegBtn">&#128465; Database leegmaken</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- ════════════════════════════════════════
          BESTELLINGEN OVERZICHT MODAL
          ════════════════════════════════════════ -->
     <div class="rw-modal-backdrop" id="bestellingenModal">
@@ -231,7 +258,7 @@
         </div>
     </div>
 
-    <section class="contact-section">
+    <section id="contact" class="contact-section" style="display: none;">
         <div class="contact-container">
             <div class="contact-item">
                 <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -260,6 +287,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
     <script type="module" src="firebase-config.js"></script>
     <script type="module" src="rockwerchter.js"></script>
 </body>
