Grote update: Live + Timeline (teampage) + Admin2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="overlay-score" id="overlayAwayScore">0</div>
                         </div>
                     </div>
-                    <button class="overlay-watch-btn" onclick="window.location.href='live.html'">
+                    <button id="overlayWatchBtn" class="overlay-watch-btn" onclick="window.location.href='live.html'">
                         VOLG LIVE →
                     </button>
                 </div>
