LIVE Update - Details | Timer fix | Tijdslijn | Announcement icon

--- a/rockwerchter.html
+++ b/rockwerchter.html
@@ -180,9 +180,9 @@
                         <div class="cash-snel-rij">
                             <button class="cash-snel-btn" data-bedrag="2">&#8364;2</button>
                             <button class="cash-snel-btn" data-bedrag="1">&#8364;1</button>
-                            <button class="cash-snel-btn" data-bedrag="0.50">&#8364;0.50</button>
-                            <button class="cash-snel-btn" data-bedrag="0.20">&#8364;0.20</button>
-                            <button class="cash-snel-btn" data-bedrag="0.10">&#8364;0.10</button>
+                            <button class="cash-snel-btn" data-bedrag="0.50">50&#162;</button>
+                            <button class="cash-snel-btn" data-bedrag="0.20">20&#162;</button>
+                            <button class="cash-snel-btn" data-bedrag="0.10">10&#162;</button>
                         </div>
                         <!-- Rij 3: acties – altijd onder de knoppen -->
                         <div class="cash-snel-rij cash-actie-rij">
