--- a/live.html
+++ b/live.html
@@ -160,6 +160,14 @@
                     </select>
                     <input type="text" id="playerOutManualInput" class="modal-input-manual" placeholder="Of typ naam handmatig...">
 
+                    <!-- INJURY checkbox — directly under "Speler UIT" -->
+                    <div id="injuryRow" style="display:none; align-items:center; gap:0.5rem; margin-top:0.5rem; margin-bottom:0.25rem; padding:0.4rem 0.5rem; background:rgba(255,80,80,0.07); border-radius:8px; border:1px solid rgba(255,80,80,0.2);">
+                        <input type="checkbox" id="injuryCheck" style="width:18px;height:18px;cursor:pointer;flex-shrink:0;">
+                        <label for="injuryCheck" style="cursor:pointer; display:flex; align-items:center; gap:0.4rem; font-size:0.9rem; font-weight:600;">
+                            <img src="assets/blessure.png" alt="" style="width:20px;height:20px;"> Geblesseerd uitgewisseld
+                        </label>
+                    </div>
+
                     <label class="modal-label" style="margin-top:0.75rem;">Speler IN</label>
                     <select id="playerInSelect" class="modal-select">
                         <option value="">— Selecteer speler in —</option>
@@ -169,6 +177,13 @@
 
             </div>
             <div class="modal-actions">
+                <!-- Penalty missed row (only shown for penalty action) -->
+                <div id="penaltyMissedRow" style="display:none; width:100%; margin-bottom:0.5rem;">
+                    <button class="modal-btn" id="penaltyMissedBtn" style="background:#FF6B35; color:#fff; width:100%;">
+                        <img src="assets/penalty_missed.png" alt="" style="width:16px;height:16px;vertical-align:middle;margin-right:4px;">
+                        PENALTY GEMIST (geen doelpunt)
+                    </button>
+                </div>
                 <button class="modal-btn cancel" id="modalCancel">Annuleren</button>
                 <button class="modal-btn confirm" id="modalConfirm">Bevestigen</button>
             </div>
